All pages footer modified

--- a/css/custom.css
+++ b/css/custom.css
@@ -8299,6 +8299,10 @@ label.radio .blue {
 	font-weight: 600;
 }
 
+#product-detail-wrapper .category span {
+	color: #ffb648;
+}
+
 /* Product Detail Ends */
 /* Product Detail Ends */
 /* Responsive */
