--- a/css/custom.css
+++ b/css/custom.css
@@ -3584,7 +3584,6 @@ a.ui-button:active,
 .slicknav_menu {
 	*zoom: 1;
 	font-size: 16px;
-	background: #4c4c4c;
 	padding: 5px
 }
 
@@ -7641,6 +7640,445 @@ ol {
 }
 
 /* Dashboard Ends */
+
+/* Product Detail */
+/* Product detail Page */
+/* Product carousel & zoom */
+.product-carousel {
+	display: block;
+	max-width: 700px;
+	margin: 1em auto 3em;
+}
+
+.product-carousel a {
+	display: block;
+}
+
+.product-carousel .gallery-top {
+	border: 1px solid #ebebeb;
+	border-radius: 3px;
+	height: 450px !important;
+}
+
+.product-carousel .gallery-top .swiper-slide {
+	position: relative;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.product-carousel .gallery-top .swiper-slide a {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 400px;
+}
+
+.product-carousel .gallery-top .swiper-slide a img {
+	max-width: 100%;
+	min-height: 400px;
+	max-height: 400px;
+	object-fit: contain;
+	object-position: center;
+}
+
+.product-carousel .swiper-button-next,
+.swiper-button-prev {
+	display: none !important;
+}
+
+.product-carousel .swiper-button-next.swiper-button-white,
+.product-carousel .swiper-button-prev.swiper-button-white {
+	color: #ff3720;
+}
+
+.product-carousel .gallery-thumbs .swiper-slide {
+	position: relative;
+	transition: border .15s linear;
+	border: 1px solid #ebebeb;
+	border-radius: 3px;
+	cursor: pointer;
+	overflow: hidden;
+}
+
+.product-carousel .gallery-thumbs .swiper-slide.swiper-slide-thumb-active {
+	border-color: #000;
+}
+
+.product-carousel .gallery-thumbs .swiper-slide img {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	max-width: 100%;
+	object-fit: contain;
+	object-position: center;
+	max-height: 96px;
+	min-height: 96px;
+}
+
+#product-detail-wrapper .swiper-container.gallery-thumbs {
+	height: 100px !important;
+}
+
+/* Product carousel & zoom ends*/
+#product-detail-wrapper .p-ratings .fa-star {
+	color: orange;
+}
+
+#product-detail-wrapper .product-price .first-price {
+	text-decoration: line-through;
+	font-size: 20px;
+}
+
+#product-detail-wrapper .product-price .second-price {
+	font-weight: 600;
+	font-size: 20px;
+	color: #ffc107;
+}
+
+#product-detail-wrapper label.radio {
+	cursor: pointer;
+}
+
+#product-detail-wrapper label.radio .red {
+	background-color: #ff3720;
+	border-color: #ff3720;
+	;
+}
+
+#product-detail-wrapper label.radio .green {
+	background-color: #11c23d;
+	border-color: #11c23d;
+}
+
+label.radio .blue {
+	background-color: rgba(0, 111, 214, 0.966);
+	border-color: rgba(135, 122, 255, 0.966);
+}
+
+#product-detail-wrapper label.radio .orange {
+	background-color: orange;
+	border-color: orange;
+}
+
+#product-detail-wrapper label.radio span {
+	display: inline-block;
+	color: #ffffff;
+	width: 30px;
+	height: 30px;
+	text-transform: uppercase;
+	transition: 0.5s all;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#product-detail-wrapper label.radio input:checked+span {
+	color: #fff;
+	position: relative;
+}
+
+#product-detail-wrapper label.radio input:checked+span::before {
+	opacity: 1;
+	content: "\2713";
+	position: absolute;
+	font-size: 13px;
+	font-weight: bold;
+}
+
+#product-detail-wrapper label.radio input {
+	position: absolute;
+	top: 0;
+	left: 0;
+	visibility: hidden;
+	pointer-events: none;
+}
+
+#product-detail-wrapper .quantity input {
+	width: 60px;
+	height: 38px;
+}
+
+#product-detail-wrapper nav .nav-link {
+	color: var(--text-color);
+	font-weight: 600;
+}
+
+#product-detail-wrapper .category span {
+	color: #ffb648;
+}
+
+/* Product Detail Ends */
+/* Css Modified */
+section#order_list_top .img_order_list img {
+	width: 30px;
+}
+
+section#order_list_top .img_order_list h6 {
+	font-weight: 600;
+	color: #000000bf;
+	padding-top: 6px;
+	font-size: 15px;
+	margin-bottom: 0;
+}
+
+h6.active-item {
+	color: #FF6A00 !important;
+}
+
+/* Shipping */
+#cart_user #shipping input.radio {
+	width: 26px;
+	text-align: center;
+	height: 36px;
+	position: absolute;
+	right: 5%;
+}
+
+#cart_user span.plan-details span {
+	font-size: 14px;
+	line-height: 24px;
+}
+
+/* Shipping Ends */
+/* Delivery  */
+#cart_user .shipping_radio.custom-radio {
+	position: relative;
+}
+
+#cart_user label.shipping_radio-label {
+	padding: 17px 25px;
+	display: block;
+	background: #f3f3f3;
+	border: 1px solid;
+	border-radius: 5px;
+}
+
+#cart_user input#defaultUnchecked {
+	position: absolute;
+	top: 54%;
+	left: 2%;
+	transform: translate(5%, -60%);
+}
+
+#cart_user .delivery_info_img img {
+	width: 100px;
+}
+
+#cart_user .title_delivery {
+	border-bottom: 1px solid #dee2e6;
+	padding-bottom: 7px;
+}
+
+#cart_user input#defaultUnchecke {
+	position: absolute;
+	top: 52%;
+	left: 3%;
+	transform: translate(-3%, -50%);
+}
+
+/*************************** search select start  */
+#cart_user .main_delivery_info {
+	height: 250px;
+}
+
+@media(max-width:34em) {
+	.main_delivery_info {
+		min-width: 150px;
+		width: auto;
+	}
+}
+
+#cart_user #select_box {
+	display: none !important;
+}
+
+#cart_user .dropdown-select {
+	background-color: #fff;
+	border-radius: 6px;
+	border: solid 1px #eee;
+	box-sizing: border-box;
+	cursor: pointer;
+	display: block;
+	float: left;
+	font-size: 14px;
+	font-weight: normal;
+	height: 42px;
+	line-height: 40px;
+	outline: none;
+	padding-left: 18px;
+	padding-right: 30px;
+	position: relative;
+	text-align: left !important;
+	transition: all 0.2s ease-in-out;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	white-space: nowrap;
+	width: auto;
+}
+
+#cart_user .dropdown-select:focus {
+	background-color: #fff;
+}
+
+#cart_user .dropdown-select:hover {
+	background-color: #fff;
+}
+
+#cart_user .dropdown-select:active,
+#cart_user .dropdown-select.open {
+	background-color: #fff !important;
+	border-color: #bbb;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05) inset;
+}
+
+#cart_user .dropdown-select:after {
+	height: 0;
+	width: 0;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	border-top: 4px solid #777;
+	-webkit-transform: origin(50% 20%);
+	transform: origin(50% 20%);
+	transition: all 0.125s ease-in-out;
+	content: '';
+	display: block;
+	margin-top: -2px;
+	pointer-events: none;
+	position: absolute;
+	right: 10px;
+	top: 50%;
+}
+
+#cart_user .dropdown-select.open:after {
+	-webkit-transform: rotate(-180deg);
+	transform: rotate(-180deg);
+}
+
+#cart_user .dropdown-select.open .list {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	opacity: 1;
+	pointer-events: auto;
+}
+
+#cart_user .dropdown-select.open .option {
+	cursor: pointer;
+}
+
+#cart_user .dropdown-select.wide {
+	width: 100%;
+}
+
+#cart_user .dropdown-select.wide .list {
+	left: 0 !important;
+	right: 0 !important;
+}
+
+#cart_user .dropdown-select .list {
+	box-sizing: border-box;
+	transition: all 0.15s cubic-bezier(0.25, 0, 0.25, 1.75), opacity 0.1s linear;
+	-webkit-transform: scale(0.75);
+	transform: scale(0.75);
+	-webkit-transform-origin: 50% 0;
+	transform-origin: 50% 0;
+	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.09);
+	background-color: #fff;
+	border-radius: 6px;
+	margin-top: 4px;
+	padding: 3px 0;
+	opacity: 0;
+	overflow: hidden;
+	pointer-events: none;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	z-index: 999;
+	max-height: 250px;
+	overflow: auto;
+	border: 1px solid #ddd;
+}
+
+#cart_user .dropdown-select .list:hover .option:not(:hover) {
+	background-color: transparent !important;
+}
+
+#cart_user .dropdown-select .dd-search {
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	margin-top: 4px;
+}
+
+#cart_user .dropdown-select .dd-searchbox {
+	width: 90%;
+	padding: 0.5rem;
+	border: 1px solid #999;
+	border-color: #999;
+	border-radius: 4px;
+	outline: none;
+	height: 40px;
+}
+
+#cart_user .dropdown-select .dd-searchbox:focus {
+	border-color: #12CBC4;
+}
+
+#cart_user .dropdown-select .list ul {
+	padding: 0;
+}
+
+#cart_user .dropdown-select .option {
+	cursor: default;
+	font-weight: 400;
+	line-height: 40px;
+	outline: none;
+	padding-left: 18px;
+	padding-right: 29px;
+	text-align: left;
+	transition: all 0.2s;
+	list-style: none;
+}
+
+#cart_user .dropdown-select .option:hover,
+#cart_user .dropdown-select .option:focus {
+	background-color: #f6f6f6 !important;
+}
+
+#cart_user .dropdown-select .option.selected {
+	font-weight: 600;
+	color: #12cbc4;
+}
+
+#cart_user .dropdown-select .option.selected:focus {
+	background: #f6f6f6;
+}
+
+#cart_user .dropdown-select a {
+	color: #aaa;
+	text-decoration: none;
+	transition: all 0.2s ease-in-out;
+}
+
+#cart_user .dropdown-select a:hover {
+	color: #666;
+}
+
+/*********************************** search select end  */
+/* Delivery Ends */
+#order_list_top {
+	background-color: #f9f9f9;
+}
+
+/* Css Modified Ends */
 @media only screen and (min-width:1200px) and (max-width:1920px) {
 	.inner-header .advanced-search .input-group button {
 		right: -14px;
@@ -8043,7 +8481,10 @@ ol {
 	}
 
 	.product-show-option .select-option {
-		display: inline-block
+		display: flex;
+
+		justify-content: center;
+		flex-wrap: wrap;
 	}
 
 	.product-show-option .select-option .sorting.nice-select {
@@ -8130,444 +8571,48 @@ ol {
 	.footer-section {
 		text-align: center;
 	}
-}
 
-/* Product Detail */
-/* Product detail Page */
-/* Product carousel & zoom */
-.product-carousel {
-	display: block;
-	max-width: 700px;
-	margin: 1em auto 3em;
-}
-
-.product-carousel a {
-	display: block;
-}
-
-.product-carousel .gallery-top {
-	border: 1px solid #ebebeb;
-	border-radius: 3px;
-	height: 450px !important;
-}
-
-.product-carousel .gallery-top .swiper-slide {
-	position: relative;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.product-carousel .gallery-top .swiper-slide a {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	height: 400px;
-}
-
-.product-carousel .gallery-top .swiper-slide a img {
-	max-width: 100%;
-	min-height: 400px;
-	max-height: 400px;
-	object-fit: contain;
-	object-position: center;
-}
-
-.product-carousel .swiper-button-next,
-.swiper-button-prev {
-	display: none !important;
-}
-
-.product-carousel .swiper-button-next.swiper-button-white,
-.product-carousel .swiper-button-prev.swiper-button-white {
-	color: #ff3720;
-}
-
-.product-carousel .gallery-thumbs .swiper-slide {
-	position: relative;
-	transition: border .15s linear;
-	border: 1px solid #ebebeb;
-	border-radius: 3px;
-	cursor: pointer;
-	overflow: hidden;
-}
-
-.product-carousel .gallery-thumbs .swiper-slide.swiper-slide-thumb-active {
-	border-color: #000;
-}
-
-.product-carousel .gallery-thumbs .swiper-slide img {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	max-width: 100%;
-	object-fit: contain;
-	object-position: center;
-	max-height: 96px;
-	min-height: 96px;
-}
-
-#product-detail-wrapper .swiper-container.gallery-thumbs {
-	height: 100px !important;
-}
-
-/* Product carousel & zoom ends*/
-#product-detail-wrapper .p-ratings .fa-star {
-	color: orange;
-}
-
-#product-detail-wrapper .product-price .first-price {
-	text-decoration: line-through;
-	font-size: 20px;
-}
-
-#product-detail-wrapper .product-price .second-price {
-	font-weight: 600;
-	font-size: 20px;
-	color: #ffc107;
-}
-
-#product-detail-wrapper label.radio {
-	cursor: pointer;
-}
-
-#product-detail-wrapper label.radio .red {
-	background-color: #ff3720;
-	border-color: #ff3720;
-	;
-}
-
-#product-detail-wrapper label.radio .green {
-	background-color: #11c23d;
-	border-color: #11c23d;
-}
-
-label.radio .blue {
-	background-color: rgba(0, 111, 214, 0.966);
-	border-color: rgba(135, 122, 255, 0.966);
-}
-
-#product-detail-wrapper label.radio .orange {
-	background-color: orange;
-	border-color: orange;
-}
-
-#product-detail-wrapper label.radio span {
-	display: inline-block;
-	color: #ffffff;
-	width: 30px;
-	height: 30px;
-	text-transform: uppercase;
-	transition: 0.5s all;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-#product-detail-wrapper label.radio input:checked+span {
-	color: #fff;
-	position: relative;
-}
-
-#product-detail-wrapper label.radio input:checked+span::before {
-	opacity: 1;
-	content: "\2713";
-	position: absolute;
-	font-size: 13px;
-	font-weight: bold;
-}
-
-#product-detail-wrapper label.radio input {
-	position: absolute;
-	top: 0;
-	left: 0;
-	visibility: hidden;
-	pointer-events: none;
-}
-
-#product-detail-wrapper .quantity input {
-	width: 60px;
-	height: 38px;
-}
-
-#product-detail-wrapper nav .nav-link {
-	color: var(--text-color);
-	font-weight: 600;
-}
-
-#product-detail-wrapper .category span {
-	color: #ffb648;
-}
-
-/* Product Detail Ends */
-/* Css Modified */
-section#order_list_top .img_order_list img {
-	width: 30px;
-}
-
-section#order_list_top .img_order_list h6 {
-	font-weight: 600;
-	color: #000000bf;
-	padding-top: 6px;
-	font-size: 15px;
-	margin-bottom: 0;
-}
-
-
-h6.active-item {
-	color: #FF6A00 !important;
-}
-
-/* Shipping */
-#cart_user #shipping input.radio {
-	width: 26px;
-	text-align: center;
-	height: 36px;
-	position: absolute;
-	right: 5%;
-}
-
-#cart_user span.plan-details span {
-	font-size: 14px;
-	line-height: 24px;
-}
-
-/* Shipping Ends */
-/* Delivery  */
-#cart_user .shipping_radio.custom-radio {
-	position: relative;
-}
-
-#cart_user label.shipping_radio-label {
-	padding: 17px 25px;
-	display: block;
-	background: #f3f3f3;
-	border: 1px solid;
-	border-radius: 5px;
-}
-
-#cart_user input#defaultUnchecked {
-	position: absolute;
-	top: 54%;
-	left: 2%;
-	transform: translate(5%, -60%);
-}
-
-#cart_user .delivery_info_img img {
-	width: 100px;
-}
-
-#cart_user .title_delivery {
-	border-bottom: 1px solid #dee2e6;
-	padding-bottom: 7px;
-}
-
-#cart_user input#defaultUnchecke {
-	position: absolute;
-	top: 52%;
-	left: 3%;
-	transform: translate(-3%, -50%);
-}
-
-/*************************** search select start  */
-#cart_user .main_delivery_info {
-	height: 250px;
-}
-
-@media(max-width:34em) {
-	.main_delivery_info {
-		min-width: 150px;
-		width: auto;
+	.ht-right {
+		float: unset !important;
+		text-align: center;
+		display: flex;
+		justify-content: center;
 	}
-}
 
-#cart_user #select_box {
-	display: none !important;
-}
+	.slicknav_menu {
+		background: #4c4c4c;
+	}
 
-#cart_user .dropdown-select {
-	background-color: #fff;
-	border-radius: 6px;
-	border: solid 1px #eee;
-	box-sizing: border-box;
-	cursor: pointer;
-	display: block;
-	float: left;
-	font-size: 14px;
-	font-weight: normal;
-	height: 42px;
-	line-height: 40px;
-	outline: none;
-	padding-left: 18px;
-	padding-right: 30px;
-	position: relative;
-	text-align: left !important;
-	transition: all 0.2s ease-in-out;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	white-space: nowrap;
-	width: auto;
-}
+	.product-show-option .select-option .sorting {
+		margin-right: unset;
+	}
 
-#cart_user .dropdown-select:focus {
-	background-color: #fff;
-}
+	.product-show-option p {
+		text-align: center;
+	}
 
-#cart_user .dropdown-select:hover {
-	background-color: #fff;
-}
+	.product-shop {
+		padding-top: 40PX;
+		padding-bottom: 40PX;
+	}
 
-#cart_user .dropdown-select:active,
-#cart_user .dropdown-select.open {
-	background-color: #fff !important;
-	border-color: #bbb;
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05) inset;
-}
+	.produts-sidebar-filter {
+		text-align: center;
+	}
 
-#cart_user .dropdown-select:after {
-	height: 0;
-	width: 0;
-	border-left: 4px solid transparent;
-	border-right: 4px solid transparent;
-	border-top: 4px solid #777;
-	-webkit-transform: origin(50% 20%);
-	transform: origin(50% 20%);
-	transition: all 0.125s ease-in-out;
-	content: '';
-	display: block;
-	margin-top: -2px;
-	pointer-events: none;
-	position: absolute;
-	right: 10px;
-	top: 50%;
-}
+	#cart_user .title_delivery {
+		text-align: center;
+	}
 
-#cart_user .dropdown-select.open:after {
-	-webkit-transform: rotate(-180deg);
-	transform: rotate(-180deg);
-}
+	.contact-section {
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
 
-#cart_user .dropdown-select.open .list {
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	opacity: 1;
-	pointer-events: auto;
-}
+	.map {
+		padding-top: 20px;
 
-#cart_user .dropdown-select.open .option {
-	cursor: pointer;
-}
+	}
 
-#cart_user .dropdown-select.wide {
-	width: 100%;
-}
 
-#cart_user .dropdown-select.wide .list {
-	left: 0 !important;
-	right: 0 !important;
 }
-
-#cart_user .dropdown-select .list {
-	box-sizing: border-box;
-	transition: all 0.15s cubic-bezier(0.25, 0, 0.25, 1.75), opacity 0.1s linear;
-	-webkit-transform: scale(0.75);
-	transform: scale(0.75);
-	-webkit-transform-origin: 50% 0;
-	transform-origin: 50% 0;
-	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.09);
-	background-color: #fff;
-	border-radius: 6px;
-	margin-top: 4px;
-	padding: 3px 0;
-	opacity: 0;
-	overflow: hidden;
-	pointer-events: none;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	z-index: 999;
-	max-height: 250px;
-	overflow: auto;
-	border: 1px solid #ddd;
-}
-
-#cart_user .dropdown-select .list:hover .option:not(:hover) {
-	background-color: transparent !important;
-}
-
-#cart_user .dropdown-select .dd-search {
-	overflow: hidden;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin: 0;
-	margin-top: 4px;
-}
-
-#cart_user .dropdown-select .dd-searchbox {
-	width: 90%;
-	padding: 0.5rem;
-	border: 1px solid #999;
-	border-color: #999;
-	border-radius: 4px;
-	outline: none;
-	height: 40px;
-}
-
-#cart_user .dropdown-select .dd-searchbox:focus {
-	border-color: #12CBC4;
-}
-
-#cart_user .dropdown-select .list ul {
-	padding: 0;
-}
-
-#cart_user .dropdown-select .option {
-	cursor: default;
-	font-weight: 400;
-	line-height: 40px;
-	outline: none;
-	padding-left: 18px;
-	padding-right: 29px;
-	text-align: left;
-	transition: all 0.2s;
-	list-style: none;
-}
-
-#cart_user .dropdown-select .option:hover,
-#cart_user .dropdown-select .option:focus {
-	background-color: #f6f6f6 !important;
-}
-
-#cart_user .dropdown-select .option.selected {
-	font-weight: 600;
-	color: #12cbc4;
-}
-
-#cart_user .dropdown-select .option.selected:focus {
-	background: #f6f6f6;
-}
-
-#cart_user .dropdown-select a {
-	color: #aaa;
-	text-decoration: none;
-	transition: all 0.2s ease-in-out;
-}
-
-#cart_user .dropdown-select a:hover {
-	color: #666;
-}
-
-/*********************************** search select end  */
-/* Delivery Ends */
-#order_list_top {
-	background-color: #f9f9f9;
-}
-
-/* Css Modified Ends */
