--- a/css/custom.css
+++ b/css/custom.css
@@ -7881,6 +7881,42 @@ h6.active-item {
 	transform: translate(-3%, -50%);
 }
 
+/* Delivery  */
+#cart_user .shipping_radio.custom-radio {
+	position: relative;
+}
+
+#cart_user label.shipping_radio-label {
+	padding: 17px 20px;
+	display: block;
+	background: #f3f3f3;
+	border: 1px solid;
+	border-radius: 5px;
+}
+
+#cart_user input#defaultUnchecked {
+	position: absolute;
+	top: 54%;
+	left: 4%;
+	transform: translate(5%, -60%);
+}
+
+#cart_user .delivery_info_img img {
+	width: 100px;
+}
+
+#cart_user .title_delivery {
+	border-bottom: 1px solid #dee2e6;
+	padding-bottom: 7px;
+}
+
+#cart_user input#defaultUnchecke {
+	position: absolute;
+	top: 52%;
+	left: 5%;
+	transform: translate(-4%, -50%);
+}
+
 /*************************** search select start  */
 #cart_user .main_delivery_info {
 	height: 250px;
@@ -8077,6 +8113,7 @@ h6.active-item {
 #order_list_top {
 	background-color: #f9f9f9;
 }
+
 
 /* Css Modified Ends */
 @media only screen and (min-width:1200px) and (max-width:1920px) {
